# pdfpress

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  release.yml
src/pdfpress/: __init__.py  __main__.py  cli.py
src/pdfpress/commands/: __init__.py  compress.py  merge.py  split.py  unlock.py
src/pdfpress/core/: __init__.py  compressor.py
src/pdfpress/core/strategies/: __init__.py  base.py  combined_strategy.py  ghostscript_strategy.py  pikepdf_strategy.py
src/pdfpress/merge/: __init__.py  merger.py
src/pdfpress/parallel/: __init__.py  executor.py
src/pdfpress/split/: __init__.py  splitter.py
src/pdfpress/unlock/: __init__.py  unlocker.py
src/pdfpress/utils/: __init__.py  dependencies.py  filesize.py
src/pdfsmith/: __init__.py  __main__.py  cli.py
src/pdfsmith/commands/: __init__.py  compress.py  merge.py  split.py  unlock.py
src/pdfsmith/core/: __init__.py  compressor.py
src/pdfsmith/core/strategies/: __init__.py  combined_strategy.py  ghostscript_strategy.py  pikepdf_strategy.py
src/pdfsmith/merge/: __init__.py
src/pdfsmith/parallel/: __init__.py  executor.py
src/pdfsmith/split/: __init__.py
src/pdfsmith/unlock/: __init__.py
src/pdfsmith/utils/: __init__.py
