[project]
name = "pdfsmith"
dynamic = ["version"]
description = "PDF toolkit: compress, merge, and unlock PDF files"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Tiago Silva", email = "tiago@tsilva.com" }]
keywords = ["pdf", "compression", "optimization", "ghostscript", "pikepdf", "merge", "unlock", "password", "combine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Utilities",
]

dependencies = [
    "pikepdf>=10.0.0",
    "typer>=0.12.0",
    "rich>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
pdfsmith = "pdfsmith.cli:app"

[project.urls]
Homepage = "https://github.com/tsilva/pdf-squeezer"
Repository = "https://github.com/tsilva/pdf-squeezer"
Issues = "https://github.com/tsilva/pdf-squeezer/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/pdfsmith/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pdfsmith"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
